Fix overflow x

--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,14 @@
 /* ==========================================================================
    Lekta custom styles
    ========================================================================== */
+html {
+  overflow-x: hidden;
+}
+
 .lekta-border {
   border: 5px solid #000000;
 }
+
 .white-border-bottom {
   border-left: 5px solid #ffffff;
   border-bottom: 5px solid #ffffff;
@@ -12,12 +17,14 @@
   padding-right: 20px;
   padding-bottom: 20px;
 }
-.white-border-top{
+
+.white-border-top {
   width: 100%;
   height: 100%;
   border-left: 5px solid #ffffff;
   border-top: 5px solid #ffffff;
 }
+
 .vertical-align {
   display: flex;
   align-items: center;
@@ -281,12 +288,14 @@ p {
 .subscribe_section {
   margin-top: 100px;
 }
-.subscribe_section .subscribe-form{
+
+.subscribe_section .subscribe-form {
   min-height: 250px;
   background-image: url(/img/form_background.svg);
   background-position: center;
   background-repeat: no-repeat;
 }
+
 .subscribe_section .subscribe-form button {
   background-color: #E3FA00;
   border: 2px solid #000000;
@@ -295,6 +304,7 @@ p {
   font-weight: bold;
   margin-left: 10px;
 }
+
 .subscribe_section .subscribe-form input {
   background-color: #E3FA00;
   border: none;
